--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dist": "tsup src",
     "start:dist": "npm run dist && --env-file=.env node dist/server.js",
     "start:dev": "tsx --env-file=.env src/server.ts",
+    "start:devt": "tsx --env-file=.env src/teste.ts",
     "start:dev:watch": "tsx watch --env-file=.env src/server.ts"  
   },
   "repository": {
